tests/functional/cases/pass/test_file_include_not_struct.coil
test: {
    @file: ["general.coil" "a.x" "b.y"]
}
expected: {
    x: 1
    y: 2
}
