tests/functional/cases/fail/test_file_import_invalid.coil
a: { @file: ['general.coil' 'a' 'b' '!invalid<>path!'] }
